@@ -1,1 +1,0 @@
-RENAME TABLE `al_content` TO `al_block` ;
